@@ -1,3 +1,12 @@
+2014-06-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Fixed array integrity after pre-processor calls, resolves #56186
+
+2014-05-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Removed invalid use of "value" property in MM handling, resolves #59240
+	* Formalized deprecation of old properties, resolves #59222
+
 2014-05-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added support for one to many relations in mapping, resolves #52664
